[metadata]
name = yamlstore
version = 0.2.0
author = Petri Savolainen
author_email = petri@koodaamo.fi
description = Python package for storing and retrieving YAML documents
url = https://github.com/koodaamo/yamlstore
license = MIT
long_description = file: README.md
classifiers =
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.11

[options.packages.find]
exclude =
    tests
    docs

